--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/bitsight/jobs/1920840'>Job Application for Senior Product Designer at BitSight</a></h5> 
+<p><span class="badge badge-light">Lisbon</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://doclerholding.recruitee.com/o/product-owner-6'>
+      Product Owner - Docler Holding
+    </a></h5> 
+<p><span class="badge badge-light">Budapest, Hungary</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698692819-product-owner-for-global-sportswear-brand'>Aroghia Group Product Owner for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -102,7 +112,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://elsewhen.recruitee.com/o/senior-product-manager'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elsewhen.recruitee.com/o/senior-product-manager'>
       Senior Product Manager - Elsewhen
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
@@ -148,7 +158,7 @@
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/pager/jobs/1941775'>Job Application for Product Manager at Pager</a></h5> 
+<h5><a href='https://boards.greenhouse.io/pager/jobs/1941775'>Job Application for Product Manager at Pager</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -162,13 +172,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/25616-Product-Designer?source=feed'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/25616-Product-Designer?source=feed'>
       Product Designer at Dynamic Signal - San Bruno, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/apttus/job/oeOlbfwi'>Apttus Careers - Sr Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/apttus/job/oeOlbfwi'>Apttus Careers - Sr Product Manager</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -180,7 +190,7 @@
 <p><span class="badge badge-light">Oslo, Norway</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/zopa/785ab219-f8d7-4452-81c7-6aeb888f4488'>Zopa - Senior Product Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/zopa/785ab219-f8d7-4452-81c7-6aeb888f4488'>Zopa - Senior Product Designer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -230,7 +240,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=o0HKafwl&__jvst=Employee&__jvsd=svmN1hwr&__jvsc=Twitter&bid=nIRsqMwI'>Ingram Micro Careers - Global Cloud Product Manager-ESP</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=o0HKafwl&__jvst=Employee&__jvsd=svmN1hwr&__jvsc=Twitter&bid=nIRsqMwI'>Ingram Micro Careers - Global Cloud Product Manager-ESP</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -298,7 +308,7 @@
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4348968002'>Job Application for Principal Product Manager (OSP Now) at Ocado Group</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4348968002'>Job Application for Principal Product Manager (OSP Now) at Ocado Group</a></h5> 
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -314,7 +324,7 @@
 <p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qyIaVfw5&k=Job&j=oYEuafw0&__jvst=Employee&__jvsd=sY5fThwX&__jvsc=Twitter&bid=n2ZjqMw1'>INNIO Careers - Service Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qyIaVfw5&k=Job&j=oYEuafw0&__jvst=Employee&__jvsd=sY5fThwX&__jvsc=Twitter&bid=n2ZjqMw1'>INNIO Careers - Service Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -358,7 +368,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/buoyhealth/aee37e0b-11be-41f8-94b6-c29c51b7a4c6'>Buoy Health - Product Owner</a></h5> 
+<h5><a href='https://jobs.lever.co/buoyhealth/aee37e0b-11be-41f8-94b6-c29c51b7a4c6'>Buoy Health - Product Owner</a></h5> 
 <p><span class="badge badge-light">New York, NY  Boston</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -366,11 +376,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/axon/81e80557-ff55-402d-895b-438bbdda1141'>Axon - Principal Product Manager - Axon Records</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/axon/81e80557-ff55-402d-895b-438bbdda1141'>Axon - Principal Product Manager - Axon Records</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/vividseats/job/oHXWafwu'> Vivid Seats Careers - Product Manager / Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/vividseats/job/oHXWafwu'> Vivid Seats Careers - Product Manager / Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -414,7 +424,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/uniteus/jobs/4325874002'>Job Application for Product Manager (EMR/EHR) at Unite Us</a></h5> 
+<h5><a href='https://boards.greenhouse.io/uniteus/jobs/4325874002'>Job Application for Product Manager (EMR/EHR) at Unite Us</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -434,7 +444,7 @@
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698611715-senior-product-designer-square-ecommerce'>Square Senior Product Designer, Square Ecommerce | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698611715-senior-product-designer-square-ecommerce'>Square Senior Product Designer, Square Ecommerce | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -442,7 +452,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boh.referrals.selectminds.com/jobs/cash-management-product-manager-3967'>Cash Management Product Manager - Bank of Hawaii Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boh.referrals.selectminds.com/jobs/cash-management-product-manager-3967'>Cash Management Product Manager - Bank of Hawaii Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -452,14 +462,6 @@
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Visa/743999698610581-senior-technical-product-manager-machine-learning-data-platform-team'>Visa Senior Technical Product Manager, Machine Learning - Data Platform Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/americaatwork/2bb511c7-d0f7-4ad4-99a8-ee4f443c83d4'>America At Work - Product Manager (copy)</a></h5> 
-<p><span class="badge badge-light">Dallas, TX</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/americaatwork/f8c2ae3a-693a-4fd1-a0b6-b4c141e3f408'>America At Work - Product Manager (copy)</a></h5> 
-<p><span class="badge badge-light">Alpharetta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
