--- a/full-stack.html
+++ b/full-stack.html
@@ -42,7 +42,7 @@
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698692852-lead-full-stack-cloud-software-engineer-for-global-sportswear-brand'>Aroghia Group Lead Full Stack Cloud Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698692852-lead-full-stack-cloud-software-engineer-for-global-sportswear-brand'>Aroghia Group Lead Full Stack Cloud Software Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -66,11 +66,11 @@
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oAH89fwi&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nwHYqMwS'>Imperva Careers - Senior Software Engineer, Full Stack</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oAH89fwi&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nwHYqMwS'>Imperva Careers - Senior Software Engineer, Full Stack</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California  Redwood City, California  Los Angeles</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DevIQ/743999698668046-sr-ruby-on-rails-software-developer-full-stack'>DevIQ Sr. Ruby on Rails Software Developer, Full-Stack | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DevIQ/743999698668046-sr-ruby-on-rails-software-developer-full-stack'>DevIQ Sr. Ruby on Rails Software Developer, Full-Stack | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rigup/afe9eced-c4e9-466f-bdf3-2c8f90a6fcde'>RigUp - Full Stack Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/rigup/afe9eced-c4e9-466f-bdf3-2c8f90a6fcde'>RigUp - Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -118,7 +118,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://dedeleads.com/job/strategic-employment-partners-looking-for-remote-full-stack-javascript-developer/'>Strategic Employment Partners looking for Remote Full-Stack JavaScript Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/strategic-employment-partners-looking-for-remote-full-stack-javascript-developer/'>Strategic Employment Partners looking for Remote Full-Stack JavaScript Developer</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -146,7 +146,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.prostaff.ch/de/jobs/19145'>Senior JAVA Fullstack Developer | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
+<h5><a href='https://www.prostaff.ch/de/jobs/19145'>Senior JAVA Fullstack Developer | PROSTAFF ? Swiss IT and Data Science Recruitment &amp; HR-Services</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -182,7 +182,7 @@
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rappi/83797f9d-f4d0-4c9f-9c06-68ea954212d0'>Rappi - Senior Fullstack Developer - Tech Ops</a></h5> 
+<h5><a href='https://jobs.lever.co/rappi/83797f9d-f4d0-4c9f-9c06-68ea954212d0'>Rappi - Senior Fullstack Developer - Tech Ops</a></h5> 
 <p><span class="badge badge-light">Buenos Aires</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -194,11 +194,11 @@
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.stoutsystems.com/job/2904-SM/'>Programmer Analyst (Full Stack Web)</a></h5> 
+<h5><a href='https://www.stoutsystems.com/job/2904-SM/'>Programmer Analyst (Full Stack Web)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/auth0/b6053cd7-71d0-4cc5-88c2-585b99b21f5d'>Auth0 - Full Stack Engineer, Compliance & IAM</a></h5> 
+<h5><a href='https://jobs.lever.co/auth0/b6053cd7-71d0-4cc5-88c2-585b99b21f5d'>Auth0 - Full Stack Engineer, Compliance & IAM</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -256,7 +256,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/brandwatch/job/oZisbfwE'>Brandwatch Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/brandwatch/job/oZisbfwE'>Brandwatch Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -272,7 +272,7 @@
 <p><span class="badge badge-light">San Mateo, California  Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698569272-stage-developpeur-fullstack-f-h'>Groupe CANAL+ STAGE - D?veloppeur Fullstack - F/H | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698569272-stage-developpeur-fullstack-f-h'>Groupe CANAL+ STAGE - D?veloppeur Fullstack - F/H | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -284,7 +284,7 @@
 <p><span class="badge badge-light">Stockholm Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/onepoint/743999698561598-concepteur-developpeur-fullstack'>onepoint Concepteur D?veloppeur Fullstack | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/onepoint/743999698561598-concepteur-developpeur-fullstack'>onepoint Concepteur D?veloppeur Fullstack | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -356,7 +356,7 @@
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://movinga.join.com/jobs/467504-senior-fullstack-developer-m-w-d'>Job @ Movinga (Berlin): Senior Fullstack Developer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://movinga.join.com/jobs/467504-senior-fullstack-developer-m-w-d'>Job @ Movinga (Berlin): Senior Fullstack Developer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -382,7 +382,7 @@
 <p><span class="badge badge-light">Auckland New Zealand  Auckland Auckland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TheUniversityOfAuckland/743999698533519-senior-digital-developer-open-source-technologies-full-stack'>The University of Auckland Senior Digital Developer: Open Source Technologies - Full Stack | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TheUniversityOfAuckland/743999698533519-senior-digital-developer-open-source-technologies-full-stack'>The University of Auckland Senior Digital Developer: Open Source Technologies - Full Stack | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Auckland New Zealand  Auckland Auckland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -446,7 +446,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://touchbistro.applytojob.com/apply/GApJd27W61/Senior-Full-Stack-Developer-Internal-Systems'>Senior Full Stack Developer, Internal Systems - TouchBistro - Career Page</a></h5> 
+<h5><a href='http://touchbistro.applytojob.com/apply/GApJd27W61/Senior-Full-Stack-Developer-Internal-Systems'>Senior Full Stack Developer, Internal Systems - TouchBistro - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
